--- a/docker-compose-DEV.yml
+++ b/docker-compose-DEV.yml
@@ -4,28 +4,34 @@ services:
   app:
     build:
       context: .
+    restart: always
     command: >
       sh -c "python manage.py wait_for_db &&
+             python manage.py makemigrations &&
              python manage.py migrate &&
-             python manage.py runserver 0.0.0.0:8000"
+             python manage.py runserver 0.0.0.0:8000 &&
+             python manage.py createsuperuser"
+      
     ports:
       - 8000:8000
     volumes:
       - ./app:/app
       - ./data/web:/vol/web
     environment:
-     - SECRET_KEY=devsecretkey 
-     - DEBUG=1
+     - SECRET_KEY=${SECRET_KEY} 
+     - DEBUG=${DEBUG}
      - DB_HOST=db
-     - DB_NAME=devdb
-     - DB_USER=devuser
-     - DB_PASS=changeme
+     - DB_NAME=${DB_NAME}
+     - DB_USER=${DB_USER}
+     - DB_PASS=${DB_PASS}
+     - ALLOWED_HOSTS=${ALLOWED_HOSTS}
     depends_on:
      - db
 
   db:
     image: postgres:13-alpine
+    restart: always
     environment:
-      - POSTGRES_DB=devdb
-      - POSTGRES_USER=devuser
-      - POSTGRES_PASSWORD=changeme
+      - POSTGRES_DB=${DB_NAME}
+      - POSTGRES_USER=${DB_USER}
+      - POSTGRES_PASSWORD=${DB_PASS}
