--- a/docker-compose-PROD.yml
+++ b/docker-compose-PROD.yml
@@ -7,11 +7,12 @@ services:
     restart: always
     command: >
       sh -c "python manage.py wait_for_db &&
+             python manage.py collectstatic --noinput &&
              python manage.py makemigrations &&
              python manage.py migrate &&
-             python manage.py runserver 0.0.0.0:8000"
-    ports:
-      - 8000:8000
+             gunicorn app.wsgi:application --bind 0.0.0.0:8000"
+    expose:
+      - 8000
     volumes:
       - ./app:/app
       - ./data/web:/vol/web
@@ -33,3 +34,10 @@ services:
       - POSTGRES_DB=${DB_NAME}
       - POSTGRES_USER=${DB_USER}
       - POSTGRES_PASSWORD=${DB_PASS}
+  
+  nginx:
+    build: ./nginx
+    ports:
+      - 1337:80
+    depends_on:
+      - app
