--- a/docker-compose-DEV.yml
+++ b/docker-compose-DEV.yml
@@ -29,6 +29,8 @@ services:
   db:
     image: postgres:13-alpine
     restart: always
+    ports: 
+      - 5432:5432
     environment:
       - POSTGRES_DB=${DB_NAME}
       - POSTGRES_USER=${DB_USER}
