--- a/docker-compose-PROD.yml
+++ b/docker-compose-PROD.yml
@@ -10,7 +10,9 @@ services:
              python manage.py collectstatic --noinput &&
              python manage.py makemigrations &&
              python manage.py migrate &&
-             gunicorn app.wsgi:application --bind 0.0.0.0:8000"
+             gunicorn app.wsgi:application --bind 0.0.0.0:8000
+             python manage.py import_instructions --path /init-db-imports/blendinstructions.csv
+             python manage.py import_batches --path /init-db-imports/lotnums.csv"
     expose:
       - 8000
     volumes:
