--- a/docker-compose-DEV.yml
+++ b/docker-compose-DEV.yml
@@ -9,9 +9,7 @@ services:
       sh -c "python manage.py wait_for_db &&
              python manage.py makemigrations &&
              python manage.py migrate &&
-             python manage.py runserver 0.0.0.0:8000
-             python manage.py import_instructions --path /init-db-imports/blendinstructions.csv
-             python manage.py import_batches --path /init-db-imports/lotnums.csv"
+             python manage.py runserver 0.0.0.0:8000"
     ports:
       - 8000:8000
     volumes:
