--- a/docker-compose-DEV.yml
+++ b/docker-compose-DEV.yml
@@ -1,6 +1,16 @@
 version: '3.9'
 
 services:
+  db:
+    image: postgres:13-alpine
+    restart: always
+    ports: 
+      - 5432:5432
+    environment:
+      - POSTGRES_DB=${DB_NAME}
+      - POSTGRES_USER=${DB_USER}
+      - POSTGRES_PASSWORD=${DB_PASS}
+  
   app:
     build:
       context: .
@@ -29,12 +39,33 @@ services:
     depends_on:
       - db
 
-  db:
-    image: postgres:13-alpine
-    restart: always
-    ports: 
-      - 5432:5432
+  redis:
+    image: redis:alpine
+
+  celery:
+    build:
+      context: .
+    command: celery -A app worker -l info
+    volumes:
+      - ./app:/app
     environment:
-      - POSTGRES_DB=${DB_NAME}
-      - POSTGRES_USER=${DB_USER}
-      - POSTGRES_PASSWORD=${DB_PASS}
+      - SECRET_KEY=${SECRET_KEY}
+      - DJANGO_ALLOWED_HOSTS=localhost 127.0.0.1 [::1]
+    depends_on:
+      - redis
+      - db
+      - app
+
+  celery-beat:
+    build: 
+      context: .
+    command: celery -A app beat -l info
+    volumes:
+      - ./app:/app
+    environment:
+      - SECRET_KEY=${SECRET_KEY}
+      - DJANGO_ALLOWED_HOSTS=localhost 127.0.0.1 [::1]
+    depends_on:
+      - redis
+      - db
+      - app
