--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ Django>=3.2.3,<3.3
 psycopg2>=2.8.6,<2.9
 gunicorn>=19.0.0,<20.1.0
 wheel>=0.36.1,<0.37.1
-#pandas>=1.3.5,<1.4.2
-#pyexcel>=0.5.0,<0.8.0
 django-import-export>=2.7.0,<2.8.0
 djangorestframework>=3.0.0,<3.13.1
+celery==5.1.2
+redis==3.5.3
