--- a/docker-compose-PROD.yml
+++ b/docker-compose-PROD.yml
@@ -33,7 +33,10 @@ services:
       - DB_NAME=${DB_NAME}
       - DB_USER=${DB_USER}
       - DB_PASS=${DB_PASS}
+      - DJANGO_SUPERUSER_PASSWORD=${DJANGO_SUPERUSER_PASSWORD}
       - ALLOWED_HOSTS=${ALLOWED_HOSTS}
+      - NOTIF_EMAIL_ADDRESS=${NOTIF_EMAIL_ADDRESS}
+      - NOTIF_PW=${NOTIF_PW}
     depends_on:
       - db
 
@@ -48,25 +51,39 @@ services:
     image: redis:alpine
 
   celery:
-    build: ./project
-    command: celery -A core worker -l info
+    build:
+      context: .
+    command: celery -A app worker -l warning -n p80 --pool=threads --concurrency=100
     volumes:
-      - ./project/:/usr/src/app/
+      - ./app:/app
     environment:
-      - DEBUG=1
-      - SECRET_KEY=dbaa1_i7%*3r9-=z-+_mz4r-!qeed@(-a_r(g@k8jo8y3r27%m
+      - SECRET_KEY=${SECRET_KEY}
       - DJANGO_ALLOWED_HOSTS=localhost 127.0.0.1 [::1]
+      - DB_HOST=db
+      - DB_NAME=${DB_NAME}
+      - DB_USER=${DB_USER}
+      - DB_PASS=${DB_PASS}
+      - NOTIF_EMAIL_ADDRESS=${NOTIF_EMAIL_ADDRESS}
+      - NOTIF_PW=${NOTIF_PW}
     depends_on:
       - redis
-      
+      - db
+      - app
+
   celery-beat:
-    build: ./project
-    command: celery -A core beat -l info
+    build: 
+      context: .
+    command: celery -A app beat -l info
     volumes:
-      - ./project/:/usr/src/app/
+      - ./app:/app
     environment:
-      - DEBUG=1
-      - SECRET_KEY=dbaa1_i7%*3r9-=z-+_mz4r-!qeed@(-a_r(g@k8jo8y3r27%m
+      - SECRET_KEY=${SECRET_KEY}
       - DJANGO_ALLOWED_HOSTS=localhost 127.0.0.1 [::1]
+      - DB_HOST=db
+      - DB_NAME=${DB_NAME}
+      - DB_USER=${DB_USER}
+      - DB_PASS=${DB_PASS}
     depends_on:
       - redis
+      - db
+      - app
