--- a/docker-compose-DEV.yml
+++ b/docker-compose-DEV.yml
@@ -19,9 +19,7 @@ services:
       sh -c "python manage.py wait_for_db &&
              python manage.py makemigrations &&
              python manage.py migrate &&
-             python manage.py runserver 0.0.0.0:1337
-             python manage.py import_instructions --path /init-db-imports/blendinstructions.csv
-             python manage.py import_batches --path /init-db-imports/lotnums.csv"
+             python manage.py runserver 0.0.0.0:1337"
     ports:
       - 1337:1337
     volumes:
