--- a/docker-compose-PROD.yml
+++ b/docker-compose-PROD.yml
@@ -21,7 +21,7 @@ services:
              python manage.py collectstatic --noinput &&
              python manage.py makemigrations &&
              python manage.py migrate &&
-             gunicorn app.wsgi:application --bind 0.0.0.0:8000"
+             gunicorn app.wsgi:application --bind 0.0.0.0:8000 --workers=2 --threads=4 --worker-class=gthread"
     expose:
       - 8000
     volumes:
