add live schedule pages via OneDrive (terrible)

--- a/.gitignore
+++ b/.gitignore
@@ -131,3 +131,7 @@ dmypy.json
 .pyre/
 
 /data
+app/prodverse/static/prodverse/html/Kinpak, Inc/Production - Web Parts/.849C9593-D756-4E56-8D6E-42412F2A707B
+app/prodverse/static/prodverse/html/Kinpak, Inc/desktop.ini
+app/prodverse/static/prodverse/html/OneDrive - Kinpak, Inc/desktop.ini
+app/prodverse/static/prodverse/html/OneDrive - Kinpak, Inc/.849C9593-D756-4E56-8D6E-42412F2A707B
