--- a/docker-compose-PROD.yml
+++ b/docker-compose-PROD.yml
@@ -50,41 +50,5 @@ services:
   
   redis:
     image: redis:alpine
-
-  celery:
-    build:
-      context: .
-    command: celery -A app worker -l warning -n p80 --pool=threads --concurrency=100
-    volumes:
-      - ./app:/app
-    environment:
-      - SECRET_KEY=${SECRET_KEY}
-      - DJANGO_ALLOWED_HOSTS=localhost 127.0.0.1 [::1]
-      - DB_HOST=db
-      - DB_NAME=${DB_NAME}
-      - DB_USER=${DB_USER}
-      - DB_PASS=${DB_PASS}
-      - NOTIF_EMAIL_ADDRESS=${NOTIF_EMAIL_ADDRESS}
-      - NOTIF_PW=${NOTIF_PW}
-    depends_on:
-      - redis
-      - db
-      - app
-
-  celery-beat:
-    build: 
-      context: .
-    command: celery -A app beat -l info
-    volumes:
-      - ./app:/app
-    environment:
-      - SECRET_KEY=${SECRET_KEY}
-      - DJANGO_ALLOWED_HOSTS=localhost 127.0.0.1 [::1]
-      - DB_HOST=db
-      - DB_NAME=${DB_NAME}
-      - DB_USER=${DB_USER}
-      - DB_PASS=${DB_PASS}
-    depends_on:
-      - redis
-      - db
-      - app
+    ports:
+      - 6379:6379
