Update gitignore to exclude prod schedule htmls.

--- a/.gitignore
+++ b/.gitignore
@@ -140,3 +140,4 @@ app/prodverse/static/prodverse/html/OneDrive - Kinpak, Inc/.849C9593-D756-4E56-8
 /local_machine_scripts/python_db_scripts/last_touch
 /local_machine_scripts/python_db_scripts/error_logs
 /db_imports
+**/app/prodverse/static/prodverse/html/Kinpak, Inc/Production - Web Parts
