--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -13,4 +13,11 @@ server {
         proxy_redirect off;
     }
 
+    location /dynamic/html/ {
+        alias '/app/prodverse/static/prodverse/html/Kinpak, Inc/Production - Web Parts/';
+        expires modified +5s;
+        add_header Cache-Control "public";
+    }
+
+
 }
