--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,6 +1,12 @@
+# For the blue environment:
 upstream app {
-    server app:8000;
+    server app_blue:8001;
 }
+
+# For the green environment (commented out when not in use):
+# upstream app {
+#     server app_green:8002;
+# }
 
 server {
 
@@ -18,6 +24,5 @@ server {
         expires modified +5s;
         add_header Cache-Control "public";
     }
-
 
 }
