Update views and nginx config.

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,12 +1,12 @@
 # For the blue environment:
-upstream app {
-    server app_blue:8001;
-}
+# upstream app {
+#     server app_blue:8001;
+# }
 
 # For the green environment (commented out when not in use):
-# upstream app {
-#     server app_green:8002;
-# }
+upstream app {
+    server app_green:8002;
+}
 
 server {
     listen 80;
