--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -5,7 +5,10 @@ upstream app {
 server {
     listen 80;
 
+    server_name 192.168.178.169;
+
     location / {
+        rewrite ^ http://192.168.178.169:1337$request_uri? permanent;
         proxy_pass http://app;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $host;
