Hotfix nginx issues.

--- a/nginx/temp_copy/nginx.conf
+++ b/nginx/temp_copy/nginx.conf
@@ -1,5 +1,5 @@
 upstream app {
-    server app_blue:8001;
+    server app_green:8002;
 }
 
 server {
@@ -8,6 +8,7 @@ server {
     server_name 192.168.178.169;
 
     location / {
+        rewrite ^ http://192.168.178.169:1337$request_uri? permanent;
         proxy_pass http://app;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $host;
