Add styling and configure image urls for ghs page.

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -19,5 +19,9 @@ server {
         expires modified +5s;
         add_header Cache-Control "public";
     }
+            
+    location /static/media/core/media/GHSPictograms/ {
+        alias '/app/media/core/media/GHSPictograms/';
+    }
 
 }
