--- a/nginx/temp_copy/nginx.conf
+++ b/nginx/temp_copy/nginx.conf
@@ -1,5 +1,5 @@
 upstream app {
-    server app_blue:8001;
+    server app_green:8002;
 }
 
 server {
@@ -18,6 +18,10 @@ server {
         alias '/app/prodverse/static/prodverse/html/Kinpak, Inc/Production - Web Parts/';
         expires modified +5s;
         add_header Cache-Control "public";
+    }
+            
+    location /static/media/core/media/GHSPictograms/ {
+        alias '/app/media/core/media/GHSPictograms/';
     }
 
 }
