Add pip caching.

--- a/docker-compose-DEV.yml
+++ b/docker-compose-DEV.yml
@@ -27,6 +27,7 @@ services:
     volumes:
       - ./app:/app
       - ./data/web:/vol/web
+      - ${USERPROFILE}/AppData/Local/pip/Cache:/root/.cache/pip
     environment:
       - SECRET_KEY=${SECRET_KEY} 
       - DEBUG=${DEBUG}
