--- a/docker-compose-PROD.yml
+++ b/docker-compose-PROD.yml
@@ -29,6 +29,7 @@ services:
     volumes:
       - ./app:/app
       - ./data/web:/vol/web
+      - ${USERPROFILE}/AppData/Local/pip/Cache:/root/.cache/pip
     environment:
       - SECRET_KEY=${SECRET_KEY} 
       - DEBUG=${DEBUG}
@@ -59,6 +60,7 @@ services:
     volumes:
       - ./app:/app
       - ./data/web:/vol/web
+      - ${USERPROFILE}/AppData/Local/pip/Cache:/root/.cache/pip
     environment:
       - SECRET_KEY=${SECRET_KEY} 
       - DEBUG=${DEBUG}
