--- a/nginx/temp_copy/nginx.conf
+++ b/nginx/temp_copy/nginx.conf
@@ -1,5 +1,5 @@
 upstream app {
-    server app_green:8002;
+    server app_blue:8001;
 }
 
 server {
@@ -8,8 +8,7 @@ server {
     server_name 192.168.178.169;
 
     location / {
-        # rewrite ^ http://192.168.178.169:1337$request_uri? permanent;
-        # proxy_pass http://app;
+        proxy_pass http://app;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $host;
         proxy_redirect off;
@@ -19,6 +18,10 @@ server {
         alias '/app/prodverse/static/prodverse/html/Kinpak, Inc/Production - Web Parts/';
         expires modified +5s;
         add_header Cache-Control "public";
+    }
+            
+    location /static/media/core/media/GHSPictograms/ {
+        alias '/app/media/core/media/GHSPictograms/';
     }
 
 }
