--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -12,6 +12,11 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $host;
         proxy_redirect off;
+
+        # WebSocket support
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
     }
 
     location /dynamic/html/ {
@@ -23,5 +28,4 @@ server {
     location /static/media/core/media/GHSPictograms/ {
         alias '/app/media/core/media/GHSPictograms/';
     }
-
 }
