--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ gunicorn>=19.0.0,<20.1.0
 wheel>=0.36.1,<0.37.1
 django-import-export>=2.7.0,<2.8.0
 djangorestframework>=3.0.0,<3.13.1
-redis==3.5.3
+redis==5.0.0
 Pillow==9.2.0
 django-ordered-model==3.6
 django-crispy-forms==1.14.0
@@ -13,3 +13,6 @@ lxml==4.9.1
 requests==2.28.1
 django-q2==1.4.9
 croniter==1.3.8
+channels==4.0.0
+channels-redis==4.0.0
+daphne==3.0.2
