--- a/docker-compose-PROD.yml
+++ b/docker-compose-PROD.yml
@@ -22,13 +22,12 @@ services:
              python manage.py collectstatic --noinput &&
              python manage.py makemigrations &&
              python manage.py migrate &&
-             daphne -b 0.0.0.0 -p 8001 app.asgi:application"  # Use Daphne
+             sh /app/watch_and_reload.sh 8001"
+    working_dir: /app
     expose:
       - 8001
     volumes:
-      - ./app:/app
-      - ./data/web:/vol/web
-      - ${USERPROFILE}/AppData/Local/pip/Cache:/root/.cache/pip
+      - ./app:/app:rw
     environment:
       - SECRET_KEY=${SECRET_KEY} 
       - DEBUG=${DEBUG}
@@ -40,6 +39,7 @@ services:
       - ALLOWED_HOSTS=${ALLOWED_HOSTS}
       - NOTIF_EMAIL_ADDRESS=${NOTIF_EMAIL_ADDRESS}
       - NOTIF_PW=${NOTIF_PW}
+      - PYTHONUNBUFFERED=1
     depends_on:
       - db
 
@@ -53,13 +53,12 @@ services:
              python manage.py collectstatic --noinput &&
              python manage.py makemigrations &&
              python manage.py migrate &&
-             daphne -b 0.0.0.0 -p 8002 app.asgi:application"  # Use Daphne
+             sh /app/watch_and_reload.sh 8002"
+    working_dir: /app
     expose:
       - 8002
     volumes:
-      - ./app:/app
-      - ./data/web:/vol/web
-      - ${USERPROFILE}/AppData/Local/pip/Cache:/root/.cache/pip
+      - ./app:/app:rw
     environment:
       - SECRET_KEY=${SECRET_KEY} 
       - DEBUG=${DEBUG}
@@ -71,6 +70,7 @@ services:
       - ALLOWED_HOSTS=${ALLOWED_HOSTS}
       - NOTIF_EMAIL_ADDRESS=${NOTIF_EMAIL_ADDRESS}
       - NOTIF_PW=${NOTIF_PW}
+      - PYTHONUNBUFFERED=1
     depends_on:
       - db
 
