--- a/nginx/temp_copy/nginx.conf
+++ b/nginx/temp_copy/nginx.conf
@@ -1,17 +1,22 @@
 upstream app {
-    server app_blue:8001;
+    server app_green:8002;
 }
 
 server {
     listen 80;
 
-    server_name 192.168.178.169;
+    server_name 192.168.178.168;
 
     location / {
         proxy_pass http://app;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $host;
         proxy_redirect off;
+
+        # WebSocket support
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
     }
 
     location /dynamic/html/ {
@@ -23,5 +28,4 @@ server {
     location /static/media/core/media/GHSPictograms/ {
         alias '/app/media/core/media/GHSPictograms/';
     }
-
 }
