--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -28,4 +28,12 @@ server {
     location /static/media/core/media/GHSPictograms/ {
         alias '/app/media/core/media/GHSPictograms/';
     }
+
+
+    location /kpklauncher/o365addins/excelitemlookup/ {
+        alias '/app/kpklauncher/o365addins/excelitemlookup/';
+        expires modified +5s;
+        add_header Cache-Control "public";
+        add_header Content-Type "application/xml";
+    }
 }
