--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -4,8 +4,12 @@ upstream app {
 
 server {
     listen 80;
+    listen 443 ssl;
 
-    server_name 192.168.178.168;
+    ssl_certificate /etc/nginx/ssl/exceladdin.crt;
+    ssl_certificate_key /etc/nginx/ssl/exceladdin.key;
+
+    server_name 192.168.178.169;
 
     location / {
         proxy_pass http://app;
