--- a/nginx/temp_copy/nginx.conf
+++ b/nginx/temp_copy/nginx.conf
@@ -1,11 +1,15 @@
 upstream app {
-    server app_blue:8001;
+    server app_green:8002;
 }
 
 server {
     listen 80;
+    listen 443 ssl;
 
-    server_name 192.168.178.168;
+    ssl_certificate /etc/nginx/ssl/exceladdin.crt;
+    ssl_certificate_key /etc/nginx/ssl/exceladdin.key;
+
+    server_name 192.168.178.169;
 
     location / {
         proxy_pass http://app;
@@ -27,5 +31,13 @@ server {
             
     location /static/media/core/media/GHSPictograms/ {
         alias '/app/media/core/media/GHSPictograms/';
+    }
+
+
+    location /kpklauncher/o365addins/excelitemlookup/ {
+        alias '/app/kpklauncher/o365addins/excelitemlookup/';
+        expires modified +5s;
+        add_header Cache-Control "public";
+        add_header Content-Type "application/xml";
     }
 }
