Enhance NGINX SSL configuration with improved security settings

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -4,12 +4,18 @@ upstream app {
 
 server {
     listen 80;
-    listen 443 ssl;
+    listen 443 ssl default_server;
+    server_name 192.168.178.169;
 
+    # SSL configuration
     ssl_certificate /etc/nginx/ssl/exceladdin.crt;
     ssl_certificate_key /etc/nginx/ssl/exceladdin.key;
-
-    server_name 192.168.178.169;
+    
+    # Basic SSL settings
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_session_timeout 1d;
+    ssl_session_cache shared:SSL:50m;
+    ssl_session_tickets off;  # This is important for avoiding certain SSL issues
 
     location / {
         proxy_pass http://app;
