Update SSL certificate to use IP address as Common Name

--- a/nginx/ssl/openssl.conf
+++ b/nginx/ssl/openssl.conf
@@ -9,7 +9,7 @@ ST = Alabama
 L = Montgomery
 O = Kinpak LLC
 OU = IT
-CN = Kinpak LLC Tech Support  # Changed to organization name
+CN = 192.168.178.169  # Changed to IP address
 emailAddress = jdavis@kinpakinc.com  # Optional but adds legitimacy
 
 [v3_req]
