Add https redirect

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -2,10 +2,19 @@ upstream app {
     server app_blue:8001;
 }
 
+# Server block for handling HTTP traffic
 server {
     listen 80;
-    listen 443 ssl default_server;
-    server_name 192.168.178.169;
+    server_name 192.168.178.169;  # Use your server's IP or domain name
+
+    # Redirect all HTTP requests to HTTPS
+    return 301 https://$host:1338$request_uri;
+}
+
+# Server block for handling HTTPS traffic
+server {
+    listen 443 ssl;
+    server_name 192.168.178.169;  # Use your server's IP or domain name
 
     # SSL configuration
     ssl_certificate /etc/nginx/ssl/exceladdin.crt;
@@ -45,7 +54,6 @@ server {
     location /static/media/core/media/GHSPictograms/ {
         alias '/app/media/core/media/GHSPictograms/';
     }
-
 
     location /kpklauncher/o365addins/excelitemlookup/ {
         alias '/app/kpklauncher/o365addins/excelitemlookup/';
