(feat) SSL: add 301 redirect and ssl cert renewal script

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -2,9 +2,18 @@ upstream app {
     server app_blue:8001;
 }
 
+# Server block for handling HTTP traffic
 server {
     listen 80;
-    listen 443 ssl default_server;
+    server_name 192.168.178.169;
+
+    # Redirect all HTTP requests to HTTPS
+    return 301 https://$host:1338$request_uri;
+}
+
+# Server block for handling HTTPS traffic
+server {
+    listen 443 ssl;
     server_name 192.168.178.169;
 
     # SSL configuration
