updates to 3dnav

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -75,6 +75,14 @@ server {
         alias '/app/media/core/media/GHSPictograms/';
     }
 
+    location /static/nav3d/models/ {
+        alias '/app/nav3d/static/nav3d/models/';
+    }  
+
+    location /static/nav3d/js/ {
+        alias '/app/nav3d/static/nav3d/js/';
+    }
+
     location /kpklauncher/o365addins/excelitemlookup/ {
         alias '/app/kpklauncher/o365addins/excelitemlookup/';
         expires modified +5s;
