--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ gunicorn>=19.0.0,<20.1.0
 wheel>=0.36.1,<0.37.1
 django-import-export>=2.7.0,<2.8.0
 djangorestframework>=3.0.0,<3.13.1
+django-redis>=5.4,<6
 redis==5.0.0
 Pillow==9.2.0
 django-ordered-model==3.6
@@ -16,3 +17,4 @@ croniter==1.3.8
 channels==4.0.0
 channels-redis==4.0.0
 daphne==3.0.2
+beautifulsoup4>=4.9.0,<5.0
