--- a/docker-compose-PROD.yml
+++ b/docker-compose-PROD.yml
@@ -28,7 +28,7 @@ services:
              python manage.py collectstatic --noinput &&
              python manage.py makemigrations &&
              python manage.py migrate &&
-             sh /app/watch_and_reload.sh 8001"
+             python manage.py process_excel_completions & exec sh /app/watch_and_reload.sh 8001"
     working_dir: /app
     expose:
       - 8001
@@ -67,7 +67,7 @@ services:
              python manage.py collectstatic --noinput &&
              python manage.py makemigrations &&
              python manage.py migrate &&
-             sh /app/watch_and_reload.sh 8002"
+             python manage.py process_excel_completions & exec sh /app/watch_and_reload.sh 8002"
     working_dir: /app
     expose:
       - 8002
